Bug 1590707 - Don't display outline on CodeMirror scrollbars. r=fvsch.
Differential Revision: https://phabricator.services.mozilla.com/D50201

UltraBlame original commit: df04e4fbbcb28da75c0e5d984b1648245d2bcb86

--- a/devtools/client/shared/sourceeditor/codemirror/mozilla.css
+++ b/devtools/client/shared/sourceeditor/codemirror/mozilla.css
@@ -84,6 +84,22 @@ rgba
 }
 .
 CodeMirror
+-
+vscrollbar
+.
+CodeMirror
+-
+hscrollbar
+{
+outline
+:
+none
+!
+important
+;
+}
+.
+CodeMirror
 .
 errors
 {
